# ShittingShittingshittingShittingShittingShittingShittingShit

./: C:\Sharing\Capitals.csv  main.py  pyproject.toml
