[tool.poetry]
name = "repl_python3_beta_ShittingShittingshittingShittingShittingShittingShittingSh-1"
version = "0.1.0"
description = ""
authors = ["leonardomickmic <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
